Fix margin in header on mobile

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,9 +2,9 @@ header {
     padding: 154px 0 100px;
 }
 
-@media (min-width: 992px) {
+@media (max-width: 768px) {
     header {
-        padding: 156px 0 100px;
+        padding: 56px 0 100px !important;
     }
 }
 
